--- a/client/src/pages/setting/setting.scss
+++ b/client/src/pages/setting/setting.scss
@@ -53,14 +53,21 @@
             font-size: 18px;
         }
         .profileUpdateButton{
+            width: 100px;
+            height: 35px;
+            border-radius: 6px;
             margin-top: 20px;
-            background-color: pink;
+            background-color: rgb(24, 211, 24);
             border: none;
-            border-radius: 1px solid ;
-            border-radius: 10px;
-            padding: 10px;
-            font-size: 14px;
+            font-size: 16px;
             font-weight: 600;
+            cursor: pointer;
+            margin-left: 50%;
+            
+       
+        
+         
+
         }
     }
 }
