--- a/client/src/pages/login/login.scss
+++ b/client/src/pages/login/login.scss
@@ -1,8 +1,44 @@
-.login{
-    background-color: rgb(92, 83, 83);
-    .loginWrapper{
-        // .formContainer{
+.login {
+    .loginWrapper {
+        .formContainer {
+            width: 500px;
+            height: 600px;
+            display: flex;
+            flex-direction: column;
+            margin-left: 34%;
+            margin-top: 100px;
 
-        // }
+            .labelText {
+                font-size: 20px;
+               
+                margin-bottom: 10px;
+                
+            }
+            .loginInput{
+                height: 40px;
+                margin-bottom: 18px;
+                outline: none;
+                font-size: 16px;
+                border-radius: 10px;
+                padding-left: 10px;
+
+            }
+            .dontHaveAccountTxt{
+                font-size: 16px;
+                margin-top: 20px;
+                margin-bottom: 20px;
+                cursor: pointer;
+            }
+
+            .loginButton{
+                height: 40px;
+                margin-bottom: 18px;
+                outline: none;
+                font-size: 18px;
+                border-radius: 10px;
+                padding-left: 10px;
+                font-weight: 600;
+            }
+        }
     }
 }
