--- a/client/src/components/topbar/topBar.scss
+++ b/client/src/components/topbar/topBar.scss
@@ -21,7 +21,7 @@
         }
     }
 
-    .topCenter {
+    .topCenter, .topRight {
         flex: 6;
         .topList {
             display: flex;
