--- a/client/src/pages/login/login.scss
+++ b/client/src/pages/login/login.scss
@@ -37,6 +37,13 @@
                 padding-left: 10px;
                 font-weight: 600;
             }
+
+            .loginButton:disabled{
+                cursor: not-allowed;
+            
+                
+
+            }
         }
     }
 }
