--- a/client/src/pages/write/write.scss
+++ b/client/src/pages/write/write.scss
@@ -55,6 +55,7 @@
                 padding: 10px;
                 font-size: 14px;
                 font-weight: 600;
+                cursor: pointer;
 
                 
         }
