update and delete post

--- a/client/src/components/singlepost/singlepost.scss
+++ b/client/src/components/singlepost/singlepost.scss
@@ -51,6 +51,13 @@
             display: flex;
             justify-content: center;
         }
+        .singlePostTitleInput{
+            font-size: 28px;  
+           
+            font-family: "Varela", sans-serif;
+            
+            
+        }
 
         .author {
             font-size: 16px;
