pprofile data update

--- a/client/src/pages/setting/setting.scss
+++ b/client/src/pages/setting/setting.scss
@@ -32,6 +32,12 @@
             border-radius: 20px;
             object-fit: cover;
         }
+
+        .settingProfileUploadIcon{
+            font-size: 30px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
     }
 
     .usernameEmailPasswordContainer {
