--- a/client/src/components/topbar/topBar.scss
+++ b/client/src/components/topbar/topBar.scss
@@ -13,26 +13,64 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
         .topIcon {
             font-size: 24px;
             margin-right: 10px;
-            color: #444;
+            color: rgb(43, 155, 155);
             cursor: pointer;
+
+            &:hover {
+                color: teal;
+            }
         }
     }
 
-    .topCenter, .topRight {
+    .searchCon{
+        width: 200px;
+        height: 34px;
+        background-color: white;
+        border:1.5px solid teal;
+        border-radius: 26px;
+        display: flex;
+        align-items: center;
+        margin-top: 5px;
+        
+
+        .topSearchIcon{
+            color: teal;
+            margin-left: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+        }
+    }
+
+    .topCenter,
+    .topRight {
         flex: 6;
+
         .topList {
             display: flex;
             justify-content: center;
             align-items: center;
             list-style: none;
+
             .topListItems {
                 margin-right: 20px;
                 font-size: 18px;
-                font-weight: 400;
+                font-weight: 500;
                 cursor: pointer;
+
+                .link {
+                    &:hover {
+                        color: teal;
+                        border-bottom: 2px solid teal;
+                        padding-bottom: 3px;
+                        font-weight: 600;
+                    }
+                }
             }
         }
     }
