--- a/client/src/pages/register/register.scss
+++ b/client/src/pages/register/register.scss
@@ -2,24 +2,22 @@
     .registerWrapper {
         .formContainer {
             width: 550px;
-            // height: 500px;
             display: flex;
             flex-direction: column;
             margin-left: 34%;
             margin-top: 100px;
 
-            .heading{
+            .heading {
                 font-size: 32px;
                 margin-bottom: 40px;
                 font-weight: 600;
-
             }
 
             .labelText {
                 font-size: 20px;
-
                 margin-bottom: 10px;
             }
+
             .loginInput {
                 height: 40px;
                 margin-bottom: 18px;
@@ -27,7 +25,10 @@
                 font-size: 16px;
                 border-radius: 10px;
                 padding-left: 10px;
+                border: none;
+                border: 1.5px solid teal;
             }
+
             .dontHaveAccountTxt {
                 font-size: 16px;
                 margin-bottom: 20px;
@@ -36,12 +37,16 @@
 
             .signUpButton {
                 height: 40px;
+                width: 100%;
                 margin-bottom: 18px;
+                border: none;
                 outline: none;
                 font-size: 18px;
                 border-radius: 10px;
                 padding-left: 10px;
                 font-weight: 600;
+                background-color: teal;
+                color: white;
             }
         }
     }
