--- a/client/src/components/topbar/topBar.scss
+++ b/client/src/components/topbar/topBar.scss
@@ -1,4 +1,5 @@
 .topBarCon {
+    padding-top: 2px;
     width: 100%;
     height: 50px;
     position: sticky;
@@ -26,18 +27,17 @@
         }
     }
 
-    .searchCon{
+    .searchCon {
         width: 200px;
         height: 34px;
         background-color: white;
-        border:1.5px solid teal;
+        border: 1.5px solid teal;
         border-radius: 26px;
         display: flex;
         align-items: center;
         margin-top: 5px;
-        
 
-        .topSearchIcon{
+        .topSearchIcon {
             color: teal;
             margin-left: 10px;
             display: flex;
@@ -64,11 +64,14 @@
                 cursor: pointer;
 
                 .link {
+                    color: rgb(14, 13, 13);
+                    
                     &:hover {
                         color: teal;
                         border-bottom: 2px solid teal;
                         padding-bottom: 3px;
                         font-weight: 600;
+                        transition: all 0.2s ease-out;
                     }
                 }
             }
@@ -80,13 +83,16 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
         .topImg {
             width: 40px;
             height: 40px;
             border-radius: 50%;
             object-fit: cover;
             cursor: pointer;
+            border: 2px solid teal;
         }
+
         .topSearchIcon {
             font-size: 20px;
             color: #666;
