--- a/client/src/components/rightbar/rightbar.scss
+++ b/client/src/components/rightbar/rightbar.scss
@@ -1,72 +1,73 @@
 .rightbar {
-    flex: 3;
-    background-color: #fdfbfb;
+    height: 140vh;
+  flex: 3;
+  background-color: #fdfbfb;
 
-    .rightbarItem {
-        margin-left: 30px;
-        margin-right: 30px;
+  .rightbarItem {
+    margin-left: 30px;
+    margin-right: 30px;
 
-        .lineHrTop {
-            margin-top: 10px;
-            margin-top: 30px;
-            border-top: 0.2px solid #a7a4a4;
-        }
-
-        .lineHrBottom {
-            margin-top: 0px;
-            border-top: 0.2px solid #a7a4a4;
-            margin-bottom: 24px;
-        }
-
-        .rightbarTitle {
-            margin: 10px 0px;
-            display: flex;
-            justify-content: center;
-            font-size: 16px;
-            font-weight: 600;
-            font-family: "Varela Round", sans-serif;
-            color: #222;
-        }
-
-        .rightbarImg {
-            height: 320px;
-            width: 100%;
-            object-fit: cover;
-            border-radius: 10px;
-        }
-        .introduction {
-            padding: 10px;
-        }
-
-        .rightbarList {
-            list-style: none;
-            margin-left: 70px;
-            cursor: pointer;
-
-            .rightbarListItem {
-                color: #222;
-                display: inline-block;
-                width: 50%;
-                margin-bottom: 10px;
-            }
-        }
-
-        .rightbarSocial {
-            margin-bottom: 30px;
-            display: flex;
-            justify-content: center;
-
-            .rightbarIcon {
-                margin-right: 20px;
-                font-size: 22px;
-                cursor: pointer;
-                color: rgb(46, 173, 173);
-
-                &:hover {
-                    color: teal;
-                    transition: all 0.2s ease-out;
-                }
-            }
-        }
+    .lineHrTop {
+      margin-top: 10px;
+      margin-top: 30px;
+      border-top: 0.2px solid #a7a4a4;
     }
+
+    .lineHrBottom {
+      margin-top: 0px;
+      border-top: 0.2px solid #a7a4a4;
+      margin-bottom: 24px;
+    }
+
+    .rightbarTitle {
+      margin: 10px 0px;
+      display: flex;
+      justify-content: center;
+      font-size: 16px;
+      font-weight: 600;
+      font-family: "Varela Round", sans-serif;
+      color: #222;
+    }
+
+    .rightbarImg {
+      height: 320px;
+      width: 100%;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+    .introduction {
+      padding: 10px;
+    }
+
+    .rightbarList {
+      list-style: none;
+      margin-left: 70px;
+      cursor: pointer;
+
+      .rightbarListItem {
+        color: #222;
+        display: inline-block;
+        width: 50%;
+        margin-bottom: 10px;
+      }
+    }
+
+    .rightbarSocial {
+      margin-bottom: 30px;
+      display: flex;
+      justify-content: center;
+
+      .rightbarIcon {
+        margin-right: 20px;
+        font-size: 22px;
+        cursor: pointer;
+        color: rgb(46, 173, 173);
+
+        &:hover {
+          color: teal;
+          transition: all 0.2s ease-out;
+        }
+      }
+    }
+  }
 }
