--- a/client/src/components/topbar/topBar.scss
+++ b/client/src/components/topbar/topBar.scss
@@ -9,8 +9,8 @@
     align-items: center;
     font-family: "Josefin Sans", sans-serif;
 
-    .drawerIcon {
-        color: red;
+    .barIcon {
+        color: black;
     }
 
     .topLeft {
