--- a/client/src/components/singlepost/singlePost.css
+++ b/client/src/components/singlepost/singlePost.css
@@ -33,7 +33,6 @@
   border-bottom: 1px solid grey;
   color: #666;
 
-
 }
 
 .singlePostEdit {
@@ -43,6 +42,40 @@
 
 .singlePostIcon {
   margin-left: 10px;
+  cursor: pointer;
+}
+
+.deleteContainer1 {
+  height: 100px;
+  width: 200px;
+  background-color: grey;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.areYouSure1 {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.nuYesRow1 {
+  display: flex;
+  gap: 30px;
+  margin-top: 10px;
+}
+
+.nuNoBtn1,
+.nuYesBtn1 {
+  width: 60px;
+  height: 35px;
+  border-radius: 10px;
+  background-color: teal;
+  color: white;
+  border: none;
+  font-size: 16px;
+  font-weight: 600;
   cursor: pointer;
 }
 
